new API changes implemented

--- a/WP/Hydra/ActivityItem.xaml
+++ b/WP/Hydra/ActivityItem.xaml
@@ -26,7 +26,7 @@
         <Border Grid.Row="0" Margin="12,17,0,28">
             <Grid>
                 <TextBlock x:Name="title" Margin="0,-7,9,-32"  TextWrapping="Wrap" Style="{StaticResource PhoneTextTitle2Style}" Text="{Binding FullTitle}"/>
-                <TextBlock x:Name="associatie" Margin="0,73,374,-64" TextWrapping="Wrap" Text="{Binding Assocition}" />
+                <TextBlock x:Name="associatie" Margin="0,73,374,-64" TextWrapping="Wrap" Text="{Binding Assocition.Dn}" />
                 <TextBlock x:Name="location" Margin="99,73,184,-63" TextWrapping="Wrap" Tap="LocationHandler" Text="{Binding Location}"/>
                 <TextBlock x:Name="startDate" Margin="284,73,9,-64" Text="{Binding StartDate}" />
                 <TextBlock x:Name="endDate" Margin="284,100,9,-91" Text="{Binding EndDate}" />
