--- a/android/libs/StickyListHeaders/sample/res/layout/main.xml
+++ b/android/libs/StickyListHeaders/sample/res/layout/main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:zeus="http://schemas.android.com/apk/res/be.ugent.zeus.hydra"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    
     <com.emilsjolander.components.stickylistheaders.StickyListHeadersListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="16dip"
         android:clipToPadding="false"/>
+
 </LinearLayout>
